[gd_scene load_steps=11 format=2]

[ext_resource path="res://Assets/VanHunter/cars/bluebro.png" type="Texture" id=1]
[ext_resource path="res://Assets/Cars/img_toad.png" type="Texture" id=2]
[ext_resource path="res://Scripts/bodyCarAI.gd" type="Script" id=3]
[ext_resource path="res://Scenes/prgHealth.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/img_target.png" type="Texture" id=5]
[ext_resource path="res://Assets/Icons/img_shoot.png" type="Texture" id=6]
[ext_resource path="res://Assets/Sounds/snd_enemy_pistol.wav" type="AudioStream" id=7]
[ext_resource path="res://Assets/img_tyre2.png" type="Texture" id=8]
[ext_resource path="res://Scenes/partFire.tscn" type="PackedScene" id=9]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 13.9717, 23.0475 )

[node name="bodyCarAI" type="KinematicBody2D"]
scale = Vector2( 2, 2 )
z_as_relative = false
input_pickable = true
collision_layer = 0
collision_mask = 0
script = ExtResource( 3 )

[node name="shapeCar" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="partDirt" type="CPUParticles2D" parent="."]
visible = false
position = Vector2( 0, 15 )
z_as_relative = false
amount = 24
lifetime_randomness = 0.5
local_coords = false
emission_shape = 2
emission_rect_extents = Vector2( 10, 1 )
direction = Vector2( 0, 1 )
spread = 0.0
gravity = Vector2( 0, 0 )
initial_velocity = 125.0
scale_amount = 16.0
scale_amount_random = 0.5
color = Color( 0.372549, 0.341176, 0.341176, 1 )

[node name="partSmoke" type="CPUParticles2D" parent="."]
position = Vector2( 0, 15 )
z_as_relative = false
emitting = false
amount = 6
lifetime = 0.8
lifetime_randomness = 1.0
local_coords = false
texture = ExtResource( 8 )
emission_shape = 2
emission_rect_extents = Vector2( 10, 1 )
direction = Vector2( 0, 1 )
spread = 0.0
gravity = Vector2( 0, 0 )
initial_velocity = 125.0
scale_amount = 2.0
scale_amount_random = 1.0
color = Color( 0, 0, 0, 0.498039 )

[node name="partFire" parent="." instance=ExtResource( 9 )]

[node name="sprCar" type="Sprite" parent="."]
z_index = 10
z_as_relative = false
texture = ExtResource( 2 )

[node name="sprTarget" type="Sprite" parent="sprCar"]
modulate = Color( 1, 0.298039, 0.298039, 1 )
texture = ExtResource( 5 )

[node name="sprBro" type="Sprite" parent="."]
modulate = Color( 1, 0, 0, 1 )
texture = ExtResource( 1 )

[node name="timerAttack" type="Timer" parent="."]
process_mode = 0
autostart = true

[node name="prgHealth" parent="." instance=ExtResource( 4 )]
mouse_filter = 2

[node name="sprState" type="Sprite" parent="."]
visible = false
position = Vector2( -20.69, -26.1128 )
texture = ExtResource( 6 )

[node name="sndShot" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -10.0

[node name="timerState" type="Timer" parent="."]
process_mode = 0

[node name="twnDamage" type="Tween" parent="."]
[connection signal="input_event" from="." to="." method="_on_bodyCarEnemy_input_event"]
[connection signal="timeout" from="timerAttack" to="." method="_on_timerAttack_timeout"]
